# PhysicsEngine

./: .gitignore  README.md  cmake.inc
dependencies/json/: json.h
dependencies/pcg32/: LICENSE.txt  pcg32.h
dependencies/toojpeg/: toojpeg.cpp  toojpeg.h
include/: pch.h
src/core/camera/: README.md  ray.h  simple_camera.h
src/core/common/: common.h  constants.h  helpers.h  namespaces.h  pch.h
src/core/coordinate_frame/: README.md  absolute_frame.h  frame.h  global_frame.h  relative_frame.h
src/core/cuda/functions/: parallel_for.h
src/core/cuda/memory/: device_memory.h
src/core/cuda/util/: error.h
src/core/linear_transformations/: README.md  homogeneous_transformation_matrix.h  matrix_base.h  notes.md  quaternion.h  rotation_dyads.h  rotations.h  tcnn_random.h  tuple_base.h  vector_base.h
src/core/memory/: device_memory.h
src/core/utils/: generate_rotation_matrices.py
src/core/vector/: vector_base.h
src/pbrt/gl_tools/: display.h  gl_tools.h  glew_tools.h  glfw_tools.h
src/pbrt/rendering/: basic_renderer.cuh  render_manager.cuh
src/pbrt/scenes/: two_spheres.h
src/pbrt/shaders/: color_render.h  get_color.h  ray_color.h
src/pbrt/shapes/: hittable.h  hittable_list.h  sphere.h
src/ray_tracing/shapes/: hittable.h  hittable_list.h  sphere.h
tests/core/: CMakeLists.txt  main.cpp  orientations.txt
tests/pbrt/: CMakeLists.txt  main.cu
